# retOS

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/scripts/: check_branch_coverage.py  compare_eval_calibration.py  export_eval_calibration_evidence.py  fetch_eval_dataset.py  run_api_smoke.sh  run_eval_calibration.py  run_eval_smoke.py  seed_demo.py  smoke_api.py  wait_http.py
backend/tests/: conftest.py  test_admin_roles.py  test_admin_users_api.py  test_admin_users_unit.py  test_agent_api.py  test_agent_audits.py  test_agent_tools.py  test_api_dependencies.py  test_app.py  test_audit_api.py  test_audit_export_verifier.py  test_audit_handoff_report_export.py  test_audit_handoff_scripts.py  test_audit_manifest_check.py  test_audit_manifest_export.py  test_audit_pack_check.py  test_auditor_evidence_matrix_check.py  test_auth.py  test_authorization_matrix.py  test_backend_runtime_image_check.py  test_backup_restore_drill_check.py  test_bootstrap_local_env.py  test_branch_coverage_gate.py  test_branding_assets_check.py  test_calibration_scope_decision_check.py  test_ci_status_check.py  test_ci_workflow_check.py  test_config.py  test_demo_api.py  test_dependency_audit_check.py  test_docker_topology_check.py  test_documents_api.py  test_domains.py  test_env_security_check.py  test_eval_calibration_cli.py  test_eval_calibration_compare.py  (+38 more)
(+162 files in other folders)
